...
                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="vmb-fg-Nv9">
                    <rect key="frame" x="133.5" y="559" width="108" height="78"/>
                    <subviews>
                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GHW-AS-O3N">
                            <rect key="frame" x="0.0" y="0.0" width="108" height="35"/>
                            <fontDescription key="fontDescription" name="AppleSDGothicNeo-Regular" family="Apple SD Gothic Neo" pointSize="19"/>
                            <state key="normal" title="Random Joke"/>
                        </button>
                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4iN-ua-Yk2">
                            <rect key="frame" x="16" y="45" width="76" height="33"/>
                            <fontDescription key="fontDescription" name="AppleSDGothicNeo-Regular" family="Apple SD Gothic Neo" pointSize="17"/>
                            <state key="normal" title="Categories"/>
                            <connections>
                                <action selector="categoriesButtonPressed:" destination="-1" eventType="touchUpInside" id="tX5-ww-MNM"/>
                            </connections>
                        </button>
                    </subviews>
                </stackView>
...
